--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Gentle Whisper</title>
+    <meta name="description" content="Gentle Whisper is a Bible meditation app that helps you connect with God's Word through soothing animations, peaceful music, and moments of stillness. Reflect on Bible verses and find tranquility in His presence.">
+    <meta name="keywords" content="Bible meditation app, Christian meditation, Bible verse meditation, Peaceful Bible verses, Meditation for relaxation, Bible verse reflections, Stillness in God's presence, Christian wellness app, Bible meditation for peace, God’s word for meditation, Christian mindfulness app, Meditation with Bible verses, Relaxation and prayer app, Bible verse focus app, Christian spiritual meditation, Tranquil Bible meditation">
+    
+    <meta property="og:title" content="Gentle Whisper: Bible Meditation for Peace & Reflection">
+    <meta property="og:description" content="Find peace and stillness with Bible verses and soothing animations. Perfect for Christian meditation and relaxation.">
+    <meta property="og:image" content="/favicon.png">
+    <meta property="og:url" content="https://gentlewhisper.online">
+    <meta property="og:type" content="website">
+    
+    <meta name="twitter:title" content="Gentle Whisper: Bible Meditation for Peace & Reflection">
+    <meta name="twitter:description" content="Calm your mind and soul with Bible verses, soothing music, and tranquil animations.">
+    <meta name="twitter:image" content="/favicon.png">
+    <meta name="twitter:card" content="/favicon.png">
   </head>
   <body>
     <div id="app"></div>
