--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     
     <meta property="og:title" content="Gentle Whisper: Bible Meditation for Peace & Reflection">
     <meta property="og:description" content="Find peace and stillness with Bible verses and soothing animations. Perfect for Christian meditation and relaxation.">
-    <meta property="og:image" content="/favicon.png">
+    <meta property="og:image" content="/logo.png">
     <meta property="og:url" content="https://gentlewhisper.online">
     <meta property="og:type" content="website">
     
     <meta name="twitter:title" content="Gentle Whisper: Bible Meditation for Peace & Reflection">
     <meta name="twitter:description" content="Calm your mind and soul with Bible verses, soothing music, and tranquil animations.">
-    <meta name="twitter:image" content="/favicon.png">
-    <meta name="twitter:card" content="/favicon.png">
+    <meta name="twitter:image" content="/logo.png">
+    <meta name="twitter:card" content="/logo.png">
   </head>
   <body>
     <div id="app"></div>
