--- a/index.html
+++ b/index.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Gentle Whisper</title>
-    <meta name="description" content="Gentle Whisper is a Bible meditation app that helps you connect with God's Word through soothing animations, peaceful music, and moments of stillness. Reflect on Bible verses and find tranquility in His presence.">
-    <meta name="keywords" content="Bible meditation app, Christian meditation, Bible verse meditation, Peaceful Bible verses, Meditation for relaxation, Bible verse reflections, Stillness in God's presence, Christian wellness app, Bible meditation for peace, God’s word for meditation, Christian mindfulness app, Meditation with Bible verses, Relaxation and prayer app, Bible verse focus app, Christian spiritual meditation, Tranquil Bible meditation">
-    
-    <meta property="og:title" content="Gentle Whisper: Bible Meditation for Peace & Reflection">
-    <meta property="og:description" content="Find peace and stillness with Bible verses and soothing animations. Perfect for Christian meditation and relaxation.">
+
+    <title>Gentle Whisper: Bible Reading & Meditation App</title>
+
+    <meta name="description" content="Gentle Whisper is a Bible reading and meditation app designed to help you connect with God's Word. Explore different Bible translations, search for verses, and reflect on them in a peaceful, focused space for spiritual growth.">
+    <meta name="keywords" content="Bible, Bible app, Bible reading, Bible translations, Christian Bible, Bible verse meditation, Bible search, Bible verse reflections, Bible reading app, Christian meditation, Bible reflection, Meditation with Bible verses, Christian spiritual app, Bible reading for peace, Bible meditation app, Bible for relaxation, Bible app for prayer, Spiritual meditation, Christian mindfulness, Bible study app, Bible verse focus app, Bible prayer app, Christian wellness, Bible quotes, Bible verse daily, Christian devotional app, Bible verse focus">
+
+    <meta property="og:title" content="Gentle Whisper: Bible Reading & Meditation App">
+    <meta property="og:description" content="Search and read Bible translations, find your favorite verses, and reflect on them in a peaceful space. Perfect for spiritual growth and meditation.">
     <meta property="og:image" content="/logo.png">
     <meta property="og:url" content="https://gentlewhisper.online">
     <meta property="og:type" content="website">
-    
-    <meta name="twitter:title" content="Gentle Whisper: Bible Meditation for Peace & Reflection">
-    <meta name="twitter:description" content="Calm your mind and soul with Bible verses, soothing music, and tranquil animations.">
+
+    <meta name="twitter:title" content="Gentle Whisper: Bible Reading & Meditation App">
+    <meta name="twitter:description" content="Explore multiple Bible translations, search for verses, and spend time reflecting on God's Word. Perfect for peaceful meditation.">
     <meta name="twitter:image" content="/logo.png">
-    <meta name="twitter:card" content="/logo.png">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <!-- Additional Meta Tags for SEO -->
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Josiah Prathaban">
+    <meta name="language" content="English">
+    <meta name="theme-color" content="#000000">
   </head>
   <body>
     <div id="app"></div>
